[gd_scene load_steps=11 format=3 uid="uid://drqkt0an4mhuc"]

[ext_resource type="Script" path="res://Scripts/overloader.gd" id="1_8s6su"]
[ext_resource type="Shader" path="res://Shaders/ghost.gdshader" id="2_1fnc7"]
[ext_resource type="Texture2D" uid="uid://dkvxhjafrxs7i" path="res://Assets/ghostly-tileset.png" id="3_bcgxp"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_764i6"]
resource_local_to_scene = true
shader = ExtResource("2_1fnc7")
shader_parameter/intensity = 0.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_303ma"]
size = Vector2(43, 20)

[sub_resource type="Theme" id="Theme_0wvfr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7aiqd"]
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.247059, 0.541176, 0.215686, 1)

[sub_resource type="Theme" id="Theme_r4qaj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v6pcl"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iysp7"]
bg_color = Color(0.0823529, 0.713726, 0.72549, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.8, 0.8, 0.8, 0)

[node name="Overloader" type="Node2D"]
script = ExtResource("1_8s6su")
energy_to_kill = 350
regen_rate = -1

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_764i6")
texture = ExtResource("3_bcgxp")
flip_h = true
region_enabled = true
region_rect = Rect2(416, 320, 64, 32)

[node name="SelectArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SelectArea"]
position = Vector2(0.5, 0)
shape = SubResource("RectangleShape2D_303ma")
debug_color = Color(0.235294, 0.611765, 0.513726, 0.419608)

[node name="Panel" type="Panel" parent="."]
visible = false
custom_minimum_size = Vector2(20, 20)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -23.0
offset_top = -12.0
offset_right = 23.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_0wvfr")
theme_override_styles/panel = SubResource("StyleBoxFlat_7aiqd")

[node name="BoxContainer" type="BoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="EnergyBar" type="ProgressBar" parent="BoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme = SubResource("Theme_r4qaj")
theme_override_styles/background = SubResource("StyleBoxFlat_v6pcl")
theme_override_styles/fill = SubResource("StyleBoxFlat_iysp7")
step = 1.0
value = 50.0
show_percentage = false

[node name="RegenTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[connection signal="mouse_entered" from="SelectArea" to="." method="targetted"]
[connection signal="mouse_exited" from="SelectArea" to="." method="untargetted"]
[connection signal="timeout" from="RegenTimer" to="." method="_on_regen_timer_timeout"]
